Kickstarter landing clone

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,234 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Kickstarter</title>
+    <link rel="shortcut icon" href="./images/favicon2.svg" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <div class="page-container">
+      <header class="header page-container__header" id="top">
+        <div class="header__nav">
+          <a href="#" rel="company logo home page" class="logo header__nav-logo"></a>
+
+          <div class="header__nav-box">
+            <a href="#" class="header__nav-box-link">SPECS</a>
+            <a href="#" class="header__nav-box-link-lan">EN /</a>
+            <a href="#" class="header__nav-box-link-lan">UA</a>
+            <a href="#" class="header__nav-box-link-buy">BUY</a>
+            <a href="#menu" class="header__nav-box-link-menu"></a>
+          </div>
+        </div>
+
+        <img src="./images/header-photo-S.jpg" alt="crazybaby speakers" class="header__img">
+
+        <h1 class="header__title">Futuristic Wireless Speaker</h1>
+        <p class="header__info">Luna’s performance is balanced and smooth in all frequency ranges which makes the music both naturally pleasant and distinctly more layered.</p>
+      </header>
+
+      <div class="desktop-navigation page-container__desktop-navigation">
+        <a href="#video" class="desktop-navigation__link">OUR STORY</a>
+        <a href="#about-us" class="desktop-navigation__link">ABOUT US</a>
+        <a href="#technology" class="desktop-navigation__link">TECHNOLOGY</a>
+        <a href="#features" class="desktop-navigation__link">FEATURES</a>
+        <a href="#questions" class="desktop-navigation__link">GET IN TOUCH</a>
+      </div>
+
+      <section class="benefits page-container__benefits">
+        <div class="benefits__box">
+          <div class="benefits__box-icon benefits__box-icon--1"></div>
+          <h4 class="benefits__box-name">Futuristic Design</h4>
+          <p class="benefits__box-info">
+            To give Luna a truly flawless look, we specifically picked aircraft grade aluminum as its material and adopted both three-dimensional stretch-bending technology and a high precision cold forging technique.
+          </p>
+        </div>
+
+        <div class="benefits__box">
+          <div class="benefits__box-icon benefits__box-icon--2"></div>
+          <h4 class="benefits__box-name">Tweeter Speaker System</h4>
+          <p class="benefits__box-info">
+            To deliver a more layered sound performance better than a sole full-range speaker, our team equipped Luna with one more tweeter speaker responsible for high-frequency sound independently.
+          </p>
+        </div>
+
+        <div class="benefits__box">
+          <div class="benefits__box-icon benefits__box-icon--3"></div>
+          <h4 class="benefits__box-name">Multiroom System  </h4>
+          <p class="benefits__box-info">
+            Luna is natively compatible with your home Wi-Fi. Set up multiple speakers in different rooms to expand your music experience into the entire house.
+          </p>
+        </div>
+
+        <div class="benefits__box">
+          <div class="benefits__box-icon benefits__box-icon--4"></div>
+          <h4 class="benefits__box-name">Intuitive Lighting System</h4>
+          <p class="benefits__box-info">
+            An intuitive user interface allows you to adjust the hue and saturation of color for lighting that fits any mood and situation.
+          </p>
+        </div>
+      </section>
+
+      <div class="video-box page-container__video-box" id="video"></div>
+
+      <section class="about-us page-container__about-us" id="about-us">
+        <h2 class="about-us__title">
+          DESIGNED FOR
+          <br>
+          THE FUTURE
+        </h2>
+
+        <div class="about-us__img-box"></div>
+        <p class="about-us__text">
+          In 2014, a group of geeky industrial designers, engineering veterans and acoustic experts formed crazybaby. This is a bunch of passionate people who are crazy enough to think they can challenge the industry with disruptive audio products.
+        </p>
+        <a href="#" class="about-us__more">See more about us</a>
+      </section>
+
+      <section class="technology page-container__technology" id="technology">
+        <h2 class="technology__title">technology</h2>
+        <div class="technology__img-box">
+          <img
+            src="./images/tech-png-s.png"
+            alt="Our technology detail"
+            class="technology__img-box-img"
+          >
+        </div>
+      </section>
+
+      <section class="testimonials page-container__testimonials">
+        <div class="testimonials__text-box">
+          <p class="testimonials__text-box-paragraph">
+            “It really took me by surprise honestly to have such full beautiful sound that coming out of this small compact device. And with the brush aluminum surface, it feels so familiar. Like my iPhone.”
+          </p>
+        </div>
+        <img
+          src="./images/test-photo-s.jpg"
+          alt="Garrett Martin photo"
+          class="testimonials__img"
+        >
+        <p class="testimonials__name">Garrett Martin</p>
+        <p class="testimonials__role">Creative Director</p>
+      </section>
+
+      <section class="features page-container__features" id="features">
+        <h2 class="features__title">FEATURES</h2>
+
+        <section class="features__sound">
+          <h3 class="features__sound-title">Sound & Music</h3>
+
+          <ul class="features__sound-list">
+            <li class="features__sound-item">Feel-in-chest Base Power</li>
+            <li class="features__sound-item">Lossless Digital Audio Transmission</li>
+            <li class="features__sound-item">Easy & Stable Stereo Pairing</li>
+            <li class="features__sound-item">Crisp and Clear High Frequency Sound</li>
+            <li class="features__sound-item">Streams from Cloud Music and Local Library</li>
+            <li class="features__sound-item">Auto Music Playback from Last Song Stopped</li>
+          </ul>
+        </section>
+
+        <section class="features__connect">
+          <h3 class="features__connect-title">Connectivity</h3>
+
+          <ul class="features__connect-list">
+            <li class="features__connect-item">Hands Free Wireless Audio</li>
+            <li class="features__connect-item">Bluetooth 4.0 LE</li>
+            <li class="features__connect-item">Wi-Fi 2.4 GHz (802.11 b/g/n)</li>
+            <li class="features__connect-item">Smart Multiroom System Set Up</li>
+            <li class="features__connect-item">Party Mode with 6.0 Units and above</li>
+            <li class="features__connect-item">Powerful MESHNET Multi Speaker Network</li>
+          </ul>
+        </section>
+
+        <section class="features__app">
+          <h3 class="features__app-title">App Features</h3>
+
+          <ul class="features__app-list">
+            <li class="features__app-item">Customize Music Schedule</li>
+            <li class="features__app-item">Wake Up with Favorite Songs</li>
+            <li class="features__app-item">Home Detection Auto Wake Up</li>
+            <li class="features__app-item">Color Wheel & Saturation Change</li>
+          </ul>
+        </section>
+
+        <div class="features__slider">
+          <div class="features__slider-arrow-box">
+            <div class="features__slider-arrow-box-left"></div>
+            <div class="features__slider-arrow-box-right"></div>
+          </div>
+          <div class="features__slider-num">
+            <p>01</p>
+            <p>/</p>
+            <p>02</p>
+          </div>
+        </div>
+
+        <div class="features__img-box">
+          <img src="./images/features-s.png" alt="features of product" class="features__img-box-img">
+        </div>
+        <div class="features__bg-box"></div>
+      </section>
+
+      <section class="questions page-container__questions" id="questions">
+        <h2 class="questions__title">DO YOU HAVE ANY QUESTIONS?</h2>
+
+        <form action="#" class="questions__form" id="form">
+          <input
+            type="email"
+            required
+            class="questions__form--email"
+            id="email"
+            placeholder="Your email"
+          >
+          <label for="email"></label>
+
+          <textarea
+            class="questions__form--text"
+            required
+            name="question"
+            id="text"
+            cols="30"
+            rows="10"
+            placeholder="Your message..."
+          ></textarea>
+
+          <button type="submit" class="questions__button">SEND</button>
+        </form>
+      </section>
+
+      <footer class="footer page-container__footer">
+        <a
+          href="#"
+          rel="company logo home page"
+          class="logo footer__logo"
+        ></a>
+        <a href="#top" class="footer__top-link"></a>
+
+        <div class="footer__media-box">
+          <a
+            href="http://www.facebook.com/kickstarter"
+            target="_blank"
+            class="footer__media-box--face"
+          ></a>
+          <a
+            href="http://www.twitter.com/kickstarter"
+            target="_blank"
+            class="footer__media-box--twit"
+          ></a>
+          <a
+            href="http://www.instagram.com/kickstarter"
+            target="_blank"
+            class="footer__media-box--insta"
+          ></a>
+
+        </div>
+        <p class="footer__copyright">
+          © 2019 All rights reserved. Terms of Use & Privacy Policy
+        </p>
+      </footer>
+
+    </div>
   </body>
 </html>
